--- a/src/main/resources/templates/greeting.mustache
+++ b/src/main/resources/templates/greeting.mustache
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Getting Started: Serving Web Content</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-
-<!--/*@thymesVar id="name" type="java"*/-->
-<p th:text="'Hello, ' + ${name} + '!'" />
+<div>Hello, {{name}}!</div>
 </body>
-</html>
